# jina-paddle-hackathon

./: .gitignore  .pdm.toml  README.md  pyproject.toml
rfcs/: plato-mini.md  plato-mini_Shaomai.md  uie.md
src/: flow.py  main.py
src/jina_paddle_hackathon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/plato-mini/: README.md  pyproject.toml
src/plato-mini/src/: flow.py  main.py
src/plato-mini/src/plato_executor/: config.yml  executor.py
src/plato-mini_Shaomai/: README.md  client.py  flow.yml  requirements.txt
src/plato-mini_Shaomai/PlatoXLExecutor/: config.yml  executor.py  requirements.txt
src/plato-mini_Shaomai/tests/: test_protocols.py
src/ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/ui/src/: App.svelte
src/uie/: README.md  pyproject.toml
src/uie/src/ui/: svelte.config.js
src/uie/src/ui/src/: App.svelte
src/uie/src/uie_executor/: config.yml  executor.py
src/uie_front/: auto-imports.d.ts  index.html  package.json  pnpm-lock.yaml
src/uie_front/src/: main.ts
src/uie_front/src/pages/: index.vue
src/uie_front/src/styles/: main.css
