[tool.pdm]

[project]
name = "jina-paddle-hackathon-uie"
version = "0.1.0"
description = ""
authors = [
    {name = "", email = "gonorth@qq.com"},
]
dependencies = [
    "jina>=3.14.1",
    "paddlepaddle>=2.4.2",
    "paddlenlp>=2.5.1",
    "autopep8>=2.0.1",
    "pip>=23.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = ""
start = "python src/flow.py"
test = "python src/main.py"
create_venv = "pdm venv create 3.10"
activate_venv = "pdm venv activate in-project"
prepare = {composite = ["create_venv", "activate_venv", "pdm install"]}
